[DI-002][FIX] Create post / wrap long text

--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,8 @@ body {
 .create-post-input {
     padding-top: 8px;
     width: 100%;
+    word-wrap: break-word;
+    overflow-x: hidden;
 }
 .create-post-footer {
     display: flex;
